log
Thu 14 Sep 2023 07:21:38 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:5: error: two or more data types in declaration specifiers
   43 |     void* auxkey1 = &key1;
      |     ^~~~
treemap.c:43:22: error: ‘key1’ undeclared (first use in this function)
   43 |     void* auxkey1 = &key1;
      |                      ^~~~
treemap.c:43:22: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:44:24: error: ‘key2’ undeclared (first use in this function)
   44 |     if (is_equal(key1, key2) != 0)
      |                        ^~~~
treemap.c:44:9: error: too few arguments to function ‘is_equal’
   44 |     if (is_equal(key1, key2) != 0)
      |         ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
treemap.c:43:11: error: unused variable ‘auxkey1’ [-Werror=unused-variable]
   43 |     void* auxkey1 = &key1;
      |           ^~~~~~~
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d08d20d
Thu 14 Sep 2023 07:26:53 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:41: error: ‘key1’ undeclared (first use in this function)
   43 |     int resultado = newMap->lower_than(&key1, &key2);
      |                                         ^~~~
treemap.c:43:41: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:43:48: error: ‘key2’ undeclared (first use in this function)
   43 |     int resultado = newMap->lower_than(&key1, &key2);
      |                                                ^~~~
treemap.c:43:9: error: unused variable ‘resultado’ [-Werror=unused-variable]
   43 |     int resultado = newMap->lower_than(&key1, &key2);
      |         ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f078c5d
Thu 14 Sep 2023 07:33:30 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
6b5d89f
Thu 14 Sep 2023 07:53:11 PM UTC: 
 treemap.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:3: error: expected expression before ‘}’ token
   53 |   }
      |   ^
Compilation failed
f1e2830
Thu 14 Sep 2023 07:55:05 PM UTC: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  3|8
total_score: 0/70
3d09ac1
Thu 14 Sep 2023 07:57:30 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
9e63ca5
